# iohttp

./: .clang-format  .clang-tidy  .codechecker.baseline  .editorconfig  .gitattributes  .gitignore  .pvs-suppress.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  README.ru.md  SECURITY.md  SUPPORT.md  codecov.yml  sonar-project.properties
.claude/skills/: ROADMAP.md
.claude/skills/io-uring-patterns/: SKILL.md
.claude/skills/iohttp-architecture/: SKILL.md
.claude/skills/iohttp-documentation-style/: SKILL.md
.claude/skills/iohttp-release-management/: SKILL.md
.claude/skills/iohttp-repository-conventions/: SKILL.md
.claude/skills/iohttp-repository-conventions/references/: repository-baseline.md
.claude/skills/modern-c23/: SKILL.md
.claude/skills/modern-c23/references/: c23-checklist.md
.claude/skills/rfc-reference/: SKILL.md
.claude/skills/wolfssl-iohttp/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release.yml  sonarcloud.yml  trivy.yml
deploy/podman/: Containerfile
deploy/podman/scripts/: rfc-scraper.py
docs/: README.md
docs/en/: 01-architecture.md  02-comparison.md  03-production-hardening.md  04-framework-comparison.md  README.md
docs/plans/: 2026-03-08-iohttp-rest-framework-plan.md  2026-03-08-iohttp-sprint-plan.md  2026-03-08-s9-route-metadata-design.md  2026-03-08-s9-route-metadata-plan.md  2026-03-08-sprint-10-http3-quic.md  2026-03-08-sprint-11-integration-pipeline.md  2026-03-08-sprint-12-production-hardening.md  2026-03-10-iohttpparser-sprint-1-project-hardening.md  2026-03-10-sprint-13-critical-fixes.md  2026-03-10-sprint-14-project-hardening.md  2026-03-10-sprint-15-health-timeouts.md  2026-03-10-sprints-15-19-roadmap.md  BACKLOG.md  README.md  ROADMAP.md
docs/rfc/: README.md
docs/ru/: 01-architecture.md  03-production-hardening.md  README.md
docs/tmp/: repository-analysis-2026-03-09.md
docs/tmp/draft/: embedded_http_server_c23_spec.md  embedded_http_server_requirements_c23.md  git-project-recommendations-for-c23.md  io_uring-best-practices.md  iohttp_benchmark_methodology.md  iohttp_io_uring_architecture_requirements_c23.md  liboas_technical_spec_c23_iohttp.md  liboas_technical_specification.md  rest-api-framework-on-c-v2.md  rest-api-framework-on-c.md  rest-api-recommendations-for-iohttp.md  rfc-2.md  rfc.md  Методология комплексного тестирования производительности iohttp.md
docs/tmp/draft/iohttp_analysis/: analytical-report-on-the-iohttp-architecture.md  iohttp-architectural-audit.md  iohttp-technical-audit.md  iohttp_analysis.md  iohttp_architecture_analysis.md  iohttp_comparison_analysis.md  iohttp_functional_analysis.md
docs/tmp/draft/iohttp_error_pages/: 400.html  401.html  403.html  404.html  405.html  408.html  429.html  500.html  502.html  503.html  504.html  README.md
scripts/: build-release-assets.sh  lint-docs.py  quality.sh  rename_prefix.sh  render-release-notes.sh  run-coverage.sh  run-gcc-analyzer.sh  run-release-gate.sh
src/core/: io_buffer.c  io_buffer.h  io_conn.c  io_conn.h  io_ctx.c  io_ctx.h  io_health.c  io_loop.h  io_server.c  io_server.h  ioh_buffer.c  ioh_buffer.h  ioh_conn.c  ioh_conn.h  ioh_ctx.c  ioh_ctx.h  ioh_health.c  ioh_health.h  ioh_log.c  ioh_log.h  ioh_loop.c  ioh_loop.h  ioh_server.c  ioh_server.h
src/http/: io_alt_svc.c  io_alt_svc.h  io_cookie.c  io_cookie.h  io_http1.c  io_http1.h  io_http2.c  io_http2.h  io_http3.c  io_http3.h  io_multipart.c  io_multipart.h  io_proxy_proto.c  io_proxy_proto.h  io_quic.c  io_quic.h  io_request.c  io_request.h  io_response.c  io_response.h  ioh_alt_svc.c  ioh_alt_svc.h  ioh_cookie.c  ioh_cookie.h  ioh_http1.c  ioh_http1.h  ioh_http2.c  ioh_http2.h  ioh_http3.c  ioh_http3.h  ioh_multipart.c  ioh_multipart.h  ioh_proxy_proto.c  ioh_proxy_proto.h  ioh_quic.c  ioh_quic.h  ioh_request.c  ioh_request.h  ioh_response.c  ioh_response.h  (+2 more)
src/middleware/: io_auth.c  io_auth.h  io_cors.c  io_cors.h  io_middleware.c  io_middleware.h  io_ratelimit.c  io_ratelimit.h  io_security.c  io_security.h  ioh_auth.c  ioh_auth.h  ioh_cors.c  ioh_cors.h  ioh_middleware.c  ioh_middleware.h  ioh_ratelimit.c  ioh_ratelimit.h  ioh_security.c  ioh_security.h
src/router/: io_radix.c  io_radix.h  io_route_group.h  io_route_inspect.c  io_router.c  io_router.h  io_vhost.c  io_vhost.h  ioh_radix.c  ioh_radix.h  ioh_route_group.c  ioh_route_group.h  ioh_route_inspect.c  ioh_route_inspect.h  ioh_route_meta.c  ioh_route_meta.h  ioh_router.c  ioh_router.h  ioh_vhost.c  ioh_vhost.h
src/static/: io_compress.c  io_compress.h  io_spa.c  io_spa.h  io_static.c  io_static.h  ioh_compress.c  ioh_compress.h  ioh_spa.c  ioh_spa.h  ioh_static.c  ioh_static.h
src/tls/: io_tls.c  io_tls.h  ioh_tls.c  ioh_tls.h
src/ws/: io_sse.c  io_sse.h  io_websocket.c  io_websocket.h  ioh_sse.c  ioh_sse.h  ioh_websocket.c  ioh_websocket.h
tests/integration/: test_health_pipeline.c  test_http1_server.c  test_http2_server.c  test_http3_server.c  test_keepalive.c  test_limits.c  test_middleware_pipeline.c  test_pipeline.c  test_proxy_pipeline.c  test_request_id.c  test_shutdown.c  test_signal.c  test_timeout.c  test_tls_pipeline.c  test_tls_uring.c
tests/unit/: test_io_alt_svc.c  test_io_auth.c  test_io_buffer.c  test_io_compress.c  test_io_conn.c  test_io_cookie.c  test_io_cors.c  test_io_health.c  test_io_http1.c  test_io_http2.c  test_io_http3.c  test_io_middleware.c  test_io_multipart.c  test_io_quic.c  test_io_radix.c  test_io_ratelimit.c  test_io_request.c  test_io_route_group.c  test_io_route_inspect.c  test_io_route_meta.c  test_io_route_timeout.c  test_io_router.c  test_io_security.c  test_io_server.c  test_io_spa.c  test_io_sse.c  test_io_static.c  test_io_tls.c  test_io_vary.c  test_io_vhost.c  test_io_websocket.c  test_ioh_alt_svc.c  test_ioh_auth.c  test_ioh_buffer.c  test_ioh_compress.c  test_ioh_conn.c  test_ioh_cookie.c  test_ioh_cors.c  test_ioh_ctx.c  test_ioh_health.c  (+28 more)
